[ios] Update recently closed tabs after undoing close all

When undoing a close all tabs action, the recently closed tabs would
continue to show all the tabs. This CL properly removes the restored
tabs by removing them from the TabRestoreService.

Bug: 846786
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I3c02270cd8f4e9998f3e51032f5973fe0329bf6e
Reviewed-on: https://chromium-review.googlesource.com/1167118
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581640}
Former-commit-id: 9898ecfdda0b5bf9ea4cedb713726db3e2eba225