ios/chrome/browser/ui/tab_grid/tab_grid_view_controller.mm
@@ -246,6 +246,15 @@ NSUInteger GetPageIndexFromPage(TabGridPage page) {
       [self configureButtonsForActiveAndCurrentPage];
       // Records when the user drags the scrollView to switch pages.
       [self recordActionSwitchingToPage:_currentPage];
+
+      // TODO(crbug.com/872303) : This is a workaround because TabRestoreService
+      // does not notify observers when entries are removed. When close all tabs
+      // removes entries, the remote tabs page in the tab grid are not updated.
+      // This ensures that the table is updated whenever scrolling to it.
+      if (_currentPage == TabGridPageRemoteTabs) {
+        [self.remoteTabsViewController loadModel];
+        [self.remoteTabsViewController.tableView reloadData];
+      }
     }
   }
 }
@@ -484,6 +493,14 @@ NSUInteger GetPageIndexFromPage(TabGridPage page) {
     } else {
       _currentPage = currentPage;
     }
+  }
+  // TODO(crbug.com/872303) : This is a workaround because TabRestoreService
+  // does not notify observers when entries are removed. When close all tabs
+  // removes entries, the remote tabs page in the tab grid are not updated. This
+  // ensures that the table is updated whenever scrolling to it.
+  if (currentPage == TabGridPageRemoteTabs) {
+    [self.remoteTabsViewController loadModel];
+    [self.remoteTabsViewController.tableView reloadData];
   }
 }
 
